# flask_hogetter

./: .gitignore  README.md  Spacefile  pyproject.toml  run.bat
flask_file/: __init__.py  auth.py  auth_db.py  hogetter.py  hogetter_db.py  hogetter_db_base.py  hogetter_db_drive.py  main.py
flask_file/static/css/: auth_form.css  base.css  index.css
flask_file/templates/: base.html  index.html
flask_file/templates/auth/: auth_form.html
flask_file/templates/hogetter/: hogeet_edit.html  hogetter_form.html
test/: test.py
tests/: conftest.py  test_factory.py
